added song view component

--- a/LiturgicalMusic.WebAPI/src/app/song/song-search/song-search.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-search/song-search.component.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
         <tr *ngFor="let song of songs">
-            <td class="col-md-3">{{song.Title}}</td>
+            <td class="col-md-3"><a [routerLink]="[song.Id]">{{song.Title}}</a></td>
             <td class="col-md-2">{{song.Composer?.Name}} {{song.Composer?.Surname}}</td>
             <td class="col-md-2">{{song.Arranger?.Name}} {{song.Arranger?.Surname}}</td>
             <td class="col-md-2">{{song.Source}}</td>
