--- a/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create.component.html
@@ -1,5 +1,5 @@
 ﻿<create-data (songData)="nextPage($event)" *ngIf="currentPage==1"></create-data>
 <create-hymn [song]="song" (songVoices)="createSong($event)" *ngIf="currentPage==2 && song.Type=='hymn'"></create-hymn>
-<div *ngIf="created">
-    Pjesma je spremljena!
+<div *ngIf="spinner" style="text-align: center;">
+    <img src="app/assets/image/spinner.gif" style="width:150px;"/>
 </div>
