--- a/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create-data/song-create-data.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create-data/song-create-data.component.html
@@ -1,7 +1,7 @@
 ﻿<form [formGroup]="songForm" (ngSubmit)="createSong(songForm.value)" autocomplete="off" novalidate>
     <h2>Dodaj pjesmu</h2>
     <div class="form-group" [ngClass]="{'has-error': title.touched && title.invalid, 'has-success': title.touched && title.valid}">
-        <label for="title" class="control-label">Naziv</label>
+        <label for="title" class="control-label">Naziv *</label>
         <input type="text" formControlName="title" class="form-control" id="title" placeholder="Naziv..." required/>
         <span class="help-block" *ngIf="title.touched && title.invalid">Obavezno!</span>
     </div>
@@ -46,7 +46,7 @@
         </fieldset>
     </div>
     <div class="form-group" [ngClass]="{'has-error': type.touched && type.invalid, 'has-success': type.touched && type.valid}">
-        <label for="type" class="control-label">Tip</label>
+        <label for="type" class="control-label">Tip *</label>
         <select class="form-control" id="type" formControlName="type">
             <option value="hymn">himan</option>
             <option value="psalm">psalam</option>
