--- a/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create-hymn/song-create-hymn.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-create/song-create-hymn/song-create-hymn.component.html
@@ -93,28 +93,30 @@
             <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
         </div>
     </div>
-    <div *ngFor="let part of chosenVoicesParts; let i = index">
-        <div [ngSwitch]="part[0].partName">
-            <h2 *ngSwitchCase="'prelude'">Predigra</h2>
-            <h2 *ngSwitchCase="'interlude'">Međuigra</h2>
-            <h2 *ngSwitchCase="'coda'">Završetak</h2>
-        </div>
-        <div *ngFor="let voice of part">
-            <div [ngSwitch]="voice.voice">
-                <h3 *ngSwitchCase="'Soprano'">Sopran</h3>
-                <h3 *ngSwitchCase="'Alto'">Alt</h3>
-                <h3 *ngSwitchCase="'Tenor'">Tenor</h3>
-                <h3 *ngSwitchCase="'Bass'">Bas</h3>
+    <div *ngIf="chosenVoicesParts.length > 0">
+        <div *ngFor="let part of chosenVoicesParts; let i = index">
+            <div [ngSwitch]="part[0].partName">
+                <h2 *ngSwitchCase="'prelude'">Predigra</h2>
+                <h2 *ngSwitchCase="'interlude'">Međuigra</h2>
+                <h2 *ngSwitchCase="'coda'">Završetak</h2>
             </div>
-            <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-                <label for="{{voice.controlNameRelative}}">Relativno</label>
-                <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
-                <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
-            </div>
-            <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-                <label for="{{voice.controlName}}">Note</label>
-                <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
-                <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
+            <div *ngFor="let voice of part">
+                <div [ngSwitch]="voice.voice">
+                    <h3 *ngSwitchCase="'Soprano'">Sopran</h3>
+                    <h3 *ngSwitchCase="'Alto'">Alt</h3>
+                    <h3 *ngSwitchCase="'Tenor'">Tenor</h3>
+                    <h3 *ngSwitchCase="'Bass'">Bas</h3>
+                </div>
+                <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
+                    <label for="{{voice.controlNameRelative}}">Relativno</label>
+                    <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
+                    <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
+                </div>
+                <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
+                    <label for="{{voice.controlName}}">Note</label>
+                    <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
+                    <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
+                </div>
             </div>
         </div>
     </div>
