--- a/LiturgicalMusic.WebAPI/src/app/song/shared/song-data/song-data.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/shared/song-data/song-data.component.html
@@ -1,6 +1,5 @@
 ﻿<form [formGroup]="songForm" (ngSubmit)="createSong(songForm.value)" autocomplete="off" novalidate>
-    <h2>Dodaj pjesmu</h2>
-    <div class="form-group" [ngClass]="{'has-error': title.touched && title.invalid, 'has-success': title.touched && title.valid}">
+    <div class="form-group" [ngClass]="{'has-error': title.touched && title.invalid, 'has-success': title.value!=null && title.valid}">
         <label for="title" class="control-label">Naziv *</label>
         <input type="text" formControlName="title" class="form-control" id="title" placeholder="Naziv..." required/>
         <span class="help-block" *ngIf="title.touched && title.invalid">Obavezno!</span>
@@ -53,7 +52,7 @@
             </div>
         </fieldset>
     </div>
-    <div class="form-group" [ngClass]="{'has-error': type.touched && type.invalid, 'has-success': type.touched && type.valid}">
+    <div class="form-group" [ngClass]="{'has-error': type.touched && type.invalid, 'has-success': type.value!=null && type.valid}">
         <label for="type" class="control-label">Tip *</label>
         <select class="form-control" id="type" formControlName="type">
             <option value="hymn">himan</option>
@@ -133,6 +132,6 @@
         </fieldset>
     </div>
     <div>
-        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid || partsInvalid() || voicesInvalid()">Dodaj</button>
+        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid || partsInvalid() || voicesInvalid()">Spremi</button>
     </div>
 </form>
