--- a/LiturgicalMusic.WebAPI/src/app/song/song-search/song-search.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-search/song-search.component.html
@@ -1,5 +1,4 @@
-﻿Song search
-<table class="table table-striped">
+﻿<table class="table table-striped">
     <thead>
         <tr>
             <th class="col-md-3">Naziv</th>
