--- a/LiturgicalMusic.WebAPI/src/app/song/song-view/song-view.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/song-view/song-view.component.html
@@ -19,6 +19,10 @@
         <td>Druge informacije</td>
         <td>{{song.OtherInformations}}</td>
     </tr>
+    <tr>
+        <td></td>
+        <td><a [routerLink]="['../../create/', song.Id]">Promijeni</a></td>
+    </tr>
 </table>
 <div style="text-align:center;">
     <embed [src]="domSanitizer.bypassSecurityTrustResourceUrl(pdfFileName)" width="800" height="500"/>
