--- a/LiturgicalMusic.WebAPI/src/app/song/shared/hymn/hymn.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/shared/hymn/hymn.component.html
@@ -1,6 +1,6 @@
 ﻿<form [formGroup]="voiceForm" (ngSubmit)="createSongEmit(voiceForm.value)" autocomplete="off" novalidate>
     <div class="form-group" [ngClass]="{'has-error': key.touched && key.invalid, 'has-success': key.value!=null && key.valid}">
-        <label for="Key">Tonalitet</label>
+        <label for="Key" class="control-label">Tonalitet</label>
         <select formControlName="Key" id="Key" class="form-control">
             <option value="ces \major">Ces dur</option>
             <option value="c \major">C dur</option>
@@ -34,7 +34,7 @@
         <span class="help-block" *ngIf="key.touched && key.invalid">Obavezno!</span>
     </div>
     <div class="form-group" [ngClass]="{'has-error': (timeNumerator.touched && timeNumerator.invalid) || (timeDenominator.touched && timeDenominator.invalid), 'has-success': (timeNumerator.value!=null && timeNumerator.valid && timeDenominator.value!=null && timeDenominator.valid)}">
-        <label>Mjera</label>
+        <label class="control-label">Mjera</label>
         <select formControlName="timeNumerator" class="form-control">
             <option value="2">2</option>
             <option value="3">3</option>
@@ -64,12 +64,12 @@
             <h3 *ngSwitchCase="'Bass'">Bas</h3>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-            <label for="{{voice.controlNameRelative}}">Relativno</label>
+            <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
             <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
             <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-            <label for="{{voice.controlName}}">Note</label>
+            <label for="{{voice.controlName}}" class="control-label">Note</label>
             <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
             <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
         </div>
@@ -83,15 +83,25 @@
             <h3 *ngSwitchCase="'Bass'">Bas</h3>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-            <label for="{{voice.controlNameRelative}}">Relativno</label>
+            <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
             <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
             <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-            <label for="{{voice.controlName}}">Note</label>
+            <label for="{{voice.controlName}}" class="control-label">Note</label>
             <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
             <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
         </div>
+    </div>
+    <h2>Tekst</h2>
+    <div>
+        <div class="form-group" *ngFor="let stanza of lyrics; let i = index" [ngClass]="{'has-error': hasError(stanza.controlName), 'has-success': hasSuccess(stanza.controlName)}">
+            <label for="{{stanza.controlName}}" class="control-label">{{i + 1}}. strofa</label>
+            <textarea rows="5" cols="10" class="form-control" id="{{stanza.controlName}}" formControlName="{{stanza.controlName}}"></textarea>
+            <span class="help-block" *ngIf="hasError(stanza.controlName)">Obavezno!</span>
+        </div>
+        <button type="button" class="btn btn-default" (click)="appendStanza()">Dodaj strofu</button>
+        <button type="button" class="btn btn-default" (click)="deleteStanza()">Obriši strofu</button>
     </div>
     <div *ngIf="chosenVoicesParts.length > 0">
         <div *ngFor="let part of chosenVoicesParts; let i = index">
@@ -108,19 +118,19 @@
                     <h3 *ngSwitchCase="'Bass'">Bas</h3>
                 </div>
                 <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-                    <label for="{{voice.controlNameRelative}}">Relativno</label>
+                    <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
                     <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
                     <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
                 </div>
                 <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-                    <label for="{{voice.controlName}}">Note</label>
+                    <label for="{{voice.controlName}}" class="control-label">Note</label>
                     <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
                     <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
                 </div>
             </div>
         </div>
     </div>
-    <div *ngIf="preview">
+    <div *ngIf="preview" style="text-align:center;">
         <img src="app/assets/image/spinner.gif" style="width:150px;" *ngIf="spinner"/>
         <embed [src]="domSanitizer.bypassSecurityTrustResourceUrl(pdfFileName)" width="800" height="500" *ngIf="preview && !spinner"/>
     </div>
