--- a/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 ﻿<nav class="navbar navbar-default">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -11,12 +10,11 @@
             <a class="navbar-brand" [routerLink]="['/home']">Liturgijska glazba</a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/song/search/']" routerLinkActive="active">Pretraži pjesme</a></li>
                 <li><a [routerLink]="['/song/create/']" routerLinkActive="active">Dodaj pjesmu</a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
+        </div>
+    </div>
 </nav>
