--- a/LiturgicalMusic.WebAPI/src/app/song/shared/hymn/hymn.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/shared/hymn/hymn.component.html
@@ -1,7 +1,7 @@
-﻿<form [formGroup]="voiceForm" (ngSubmit)="createSongEmit(voiceForm.value)" autocomplete="off" novalidate>
+﻿<form autocomplete="off" [formGroup]="voiceForm" (ngSubmit)="createSongEmit(voiceForm.value)" novalidate>
     <div class="form-group" [ngClass]="{'has-error': key.touched && key.invalid, 'has-success': key.value!=null && key.valid}">
-        <label for="Key" class="control-label">Tonalitet</label>
-        <select formControlName="Key" id="Key" class="form-control">
+        <label class="control-label" for="Key">Tonalitet</label>
+        <select class="form-control" formControlName="Key" id="Key">
             <option value="ces \major">Ces dur</option>
             <option value="c \major">C dur</option>
             <option value="cis \major">Cis dur</option>
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group" [ngClass]="{'has-error': (timeNumerator.touched && timeNumerator.invalid) || (timeDenominator.touched && timeDenominator.invalid), 'has-success': (timeNumerator.value!=null && timeNumerator.valid && timeDenominator.value!=null && timeDenominator.valid)}">
         <label class="control-label">Mjera</label>
-        <select formControlName="timeNumerator" class="form-control">
+        <select class="form-control" formControlName="timeNumerator">
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
@@ -48,7 +48,7 @@
             <option value="11">11</option>
             <option value="12">12</option>
         </select>/
-        <select formControlName="timeDenominator" class="form-control">
+        <select class="form-control" formControlName="timeDenominator">
             <option value="2">2</option>
             <option value="4">4</option>
             <option value="8">8</option>
@@ -64,13 +64,13 @@
             <h3 *ngSwitchCase="'Bass'">Bas</h3>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-            <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
-            <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
+            <label class="control-label" for="{{voice.controlNameRelative}}">Relativno</label>
+            <input class="form-control" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}"  type="text" />
             <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-            <label for="{{voice.controlName}}" class="control-label">Note</label>
-            <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
+            <label class="control-label" for="{{voice.controlName}}">Note</label>
+            <textarea class="form-control" cols="10" formControlName="{{voice.controlName}}" id="{{voice.controlName}}" rows="5"></textarea>
             <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
         </div>
     </div>
@@ -83,20 +83,20 @@
             <h3 *ngSwitchCase="'Bass'">Bas</h3>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlNameRelative), 'has-success': hasSuccess(voice.controlNameRelative)}">
-            <label for="{{voice.controlNameRelative}}" class="control-label">Relativno</label>
-            <input type="text" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" class="form-control" />
+            <label class="control-label" for="{{voice.controlNameRelative}}">Relativno</label>
+            <input class="form-control" formControlName="{{voice.controlNameRelative}}" id="{{voice.controlNameRelative}}" type="text" />
             <span class="help-block" *ngIf="hasError(voice.controlNameRelative)">Obavezno!</span>
         </div>
         <div class="form-group" [ngClass]="{'has-error': hasError(voice.controlName), 'has-success': hasSuccess(voice.controlName)}">
-            <label for="{{voice.controlName}}" class="control-label">Note</label>
-            <textarea rows="5" cols="10" class="form-control" formControlName="{{voice.controlName}}" id="{{voice.controlName}}"></textarea>
+            <label class="control-label" for="{{voice.controlName}}">Note</label>
+            <textarea class="form-control" cols="10" formControlName="{{voice.controlName}}" id="{{voice.controlName}}" rows="5"></textarea>
             <span class="help-block" *ngIf="hasError(voice.controlName)">Obavezno!</span>
         </div>
     </div>
     <h2>Tekst</h2>
     <div>
         <div class="form-group" *ngFor="let stanza of lyrics; let i = index" [ngClass]="{'has-error': hasError(stanza.controlName), 'has-success': hasSuccess(stanza.controlName)}">
-            <label for="{{stanza.controlName}}" class="control-label">{{i + 1}}. strofa</label>
+            <label class="control-label" for="{{stanza.controlName}}">{{i + 1}}. strofa</label>
             <textarea rows="5" cols="10" class="form-control" id="{{stanza.controlName}}" formControlName="{{stanza.controlName}}"></textarea>
             <span class="help-block" *ngIf="hasError(stanza.controlName)">Obavezno!</span>
         </div>
