refactoring frontend, fixed update, delete

--- a/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
@@ -12,8 +12,8 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a [routerLink]="['/song/search/']" routerLinkActive="active">Pretraži pjesme</a></li>
-                <li><a [routerLink]="['/song/create/']" routerLinkActive="active">Dodaj pjesmu</a></li>
+                <li><a [routerLink]="['/songs/search/']" routerLinkActive="active">Pretraži pjesme</a></li>
+                <li><a [routerLink]="['/songs/create/']" routerLinkActive="active">Dodaj pjesmu</a></li>
             </ul>
         </div>
     </div>
