--- a/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/shared/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['/songs/search/']" routerLinkActive="active">Pretraži pjesme</a></li>
-                <li><a [routerLink]="['/songs/create/']" routerLinkActive="active">Dodaj pjesmu</a></li>
+                <li><a [routerLink]="['/songs/edit/']" routerLinkActive="active">Dodaj pjesmu</a></li>
             </ul>
         </div>
     </div>
