--- a/LiturgicalMusic.WebAPI/src/app/song/views/song-edit.component.html
+++ b/LiturgicalMusic.WebAPI/src/app/song/views/song-edit.component.html
@@ -6,54 +6,6 @@
         <input type="text" formControlName="title" class="form-control" id="title" placeholder="Naziv..." required/>
         <span class="help-block" *ngIf="title.touched && title.invalid">Obavezno!</span>
     </div>
-    <div class="form-group">
-        <fieldset>
-            <legend>Glasovi orgulja</legend>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[4]" (change)="updateTemplate(4)"/> Sopran
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[5]" (change)="updateTemplate(5)"/> Alt
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[6]" (change)="updateTemplate(6)"/> Tenor
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[7]" (change)="updateTemplate(7)"/> Bas
-                </label>
-            </div>
-        </fieldset>
-        <fieldset>
-            <legend>Ljudski glasovi</legend>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[0]" (change)="updateTemplate(0)"/> Sopran
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[1]" (change)="updateTemplate(1)"/> Alt
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[2]" (change)="updateTemplate(2)"/> Tenor
-                </label>
-            </div>
-            <div class="check-box">
-                <label class="control-label">
-                    <input type="checkbox" [checked]="templateVoices[3]" (change)="updateTemplate(3)"/> Bas
-                </label>
-            </div>
-        </fieldset>
-    </div>
     <div class="form-group" [ngClass]="{'has-error': type.touched && type.invalid, 'has-success': type.value!=null && type.valid}">
         <label for="type" class="control-label">Tip *</label>
         <select class="form-control" id="type" formControlName="type">
@@ -134,6 +86,6 @@
         </fieldset>
     </div>
     <div>
-        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid || partsInvalid() || voicesInvalid()">Spremi</button>
+        <button type="submit" class="btn btn-default" [disabled]="songForm.invalid || partsInvalid()">Spremi</button>
     </div>
 </form>
